[gd_scene load_steps=2 format=3 uid="uid://c8r1x7k2l3m4n"]

[ext_resource type="Script" uid="uid://cpk107wi1wt4r" path="res://game/ui/game_menu/save_slot_row.gd" id="1_script"]

[node name="SaveSlotRow" type="Button"]
custom_minimum_size = Vector2(320, 48)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = ""
script = ExtResource("1_script")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 6

[node name="Content" type="HBoxContainer" parent="Margin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Text" type="VBoxContainer" parent="Margin/Content"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 2

[node name="SlotLabel" type="Label" parent="Margin/Content/Text"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Slot 1"

[node name="DetailLabel" type="Label" parent="Margin/Content/Text"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
modulate = Color(1, 1, 1, 0.75)
text = "Island | Day 1 6:00 am"

[node name="EmptyLabel" type="Label" parent="Margin/Content/Text"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
modulate = Color(1, 1, 1, 0.55)
text = "Empty slot"
visible = false

[node name="GoldLabel" type="Label" parent="Margin/Content"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 11
size_flags_horizontal = 0
horizontal_alignment = 2
text = "Gold: 0"

[node name="DeleteButton" type="Button" parent="Margin/Content"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(22, 22)
size_flags_horizontal = 0
focus_mode = 0
flat = true
theme_override_font_sizes/font_size = 11
text = "X"
tooltip_text = "Delete slot"
